--- a/light.css
+++ b/light.css
@@ -93,3 +93,26 @@ body {
   opacity: 0;
   position: absolute;
 }
+
+.sectionheader {
+  text-align: center;
+}
+
+.sectionheader p{
+  color: #EF5540;
+  font-size: 100%;
+  bottom: 20px;
+  position: relative;
+}
+
+.section p{
+  text-align: left;
+  position: relative;
+  left: 100px;
+}
+
+img {
+  border: 5px solid #e4939c;
+  float: right;
+  position: relative;
+}
