--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 Background dark navy: #2b3a5b
 Pink Title: #e4939c
 Gray Subtitle: ##91A2A7
-Red subtite: #EF5540
+Red subtitle: #EF5540
 Lighter pink subtitle: #AB4967
 Charcoal: #234450
 White: #fffffe
@@ -21,6 +21,8 @@ Green accent: #59B480
 html {
   scroll-behavior: smooth;
   width: fit-content;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 
@@ -35,14 +37,9 @@ html {
     font-size: 200%;
 }
 
-.header h1.light{
-  color: #44bbbf;
-  font-size: 200%;
-}
-
-.header p{
+.header h2{
   color: #91A2A7;
-  font-size: 50%;
+  font-size: 100%;
   bottom: 50px;
   position: relative;
 }
@@ -53,6 +50,8 @@ body {
   color: #e4939c;
   margin: 0;
   transition: background .2s linear;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .paragraph {
@@ -63,6 +62,7 @@ body {
 .navbar {
   overflow: hidden; /* Hide overflow */
   background-color: #2b3a5b; /* Dark background color */
+  position: fixed;
 }
 
 /* Style the navigation bar links */
@@ -78,8 +78,8 @@ body {
 /* Change color on hover/mouse-over */
 .navbar a:hover {
   text-decoration: underline;
-  text-decoration-color: #e4939c; /* Black text color */
-  text-decoration-thickness: 3px
+  text-decoration-color: #e4939c;
+  text-decoration-thickness: 3px;
 }
 
 .navbar.light {
@@ -105,10 +105,10 @@ body {
 }
 
 .label {
-  position: absolute;
+  position: fixed;
   float: right;
   top: 5px;
-  right: 5px;
+  right: 15px;
   width: 50px;
   height: 26px;
   display: flex;
@@ -129,7 +129,7 @@ body {
 }
 
 .checkbox:checked + .label .ball {
-  background-color: #fffffe;
+  background-color: #F8F5E1;
   transform: translateX(24px);
 }
 
@@ -143,27 +143,86 @@ body {
   font-size: 150%;
 }
 
-.sectionheader p{
+.sectionheader h1 {
+  color: #44bbbf;
+}
+
+.sectionheader h2{
   color: #91A2A7;
   font-size: 100%;
   bottom: 20px;
   position: relative;
 }
 
+.aboutsection {
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+
 .aboutsection p{
-  width: auto;
-  display: block;
+  width: 60%;
+  display: inline-block;
   text-align: left;
   position: relative;
-  left: 100px;
+  left: 50px;
   margin-right: 0px;
   color: #fffffe;
+  font-size: 125%;
+  right: 100px;
 }
 
 .aboutsection img {
-  border: 5px solid #AB4967;
+  border: 5px solid #44bbbf;
+  border-radius: 50%;
   float: right;
-  right: 100px;
-  margin-left: 10px;
   clear: both;
+  position: relative;
+  align: center;
+  bottom: 50px;
+  left: 50px;
+}
+
+.aboutsection a:link {
+  color: #e4939c;
+}
+
+.aboutsection a:visited {
+  color: #91A2A7;
+}
+
+.projectsection {
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+
+.projectsection p {
+  width: 60%;
+  display: inline-block;
+  text-align: center;
+  position: relative;
+  /*right: 50px;*/
+  margin-left: 0px;
+  color: #fffffe;
+  font-size: 125%;
+  right: 100px;
+}
+
+.projectsection a:link {
+  color: #e4939c;
+}
+
+.projectsection a:visited {
+  color: #91A2A7;
+}
+
+.contactbutton {
+  align: center;
+  text-align: center;
+  background-color: inherit;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
