--- a/style.css
+++ b/style.css
@@ -45,22 +45,22 @@ html {
 body {
   background-color: #2b3a5b;
   color: #e4939c;
+  margin: 0;
   transition: background .2s linear;
+  width: 100%;
+  height: 100%;
   max-width: 100%;
   overflow-x: hidden;
   z-index: 2;
 }
 
-.paragraph {
-  color: #fffffe;
-}
-
 /* Style the top navigation bar */
 .navbar {
   width: 100%;
+  position: fixed;
   overflow: hidden; /* Hide overflow */
   background-color: #2b3a5b; /* Dark background color */
-  position: fixed;
+  transition: background .2s linear;
   top: 0px;
   z-index: 1;
 }
@@ -214,14 +214,16 @@ body {
   border: none;
   color: #fffffe;
   font-size: 1.2rem;
-  letter-spacing: 2px;
   background-color: #91A2A7;
   border-radius: 20px;
   transition: ease-out 0.3s;
   outline: none;
+  position: relative;
+  letter-spacing: 0px;
 }
 
 .contactbutton:hover {
   box-shadow: inset 300px 0 0 0 #e4939c;
   cursor: pointer;
+  letter-spacing: 2px;
 }
