--- a/style.css
+++ b/style.css
@@ -175,16 +175,13 @@ body {
   width: 100%;
 }
 
-.projectsection p {
+.projectsection p{
   width: 60%;
   display: inline-block;
   text-align: center;
   position: relative;
-  /*right: 50px;*/
-  margin-left: 0px;
   color: #fffffe;
   font-size: 125%;
-  right: 100px;
 }
 
 .projectsection a:link {
@@ -192,6 +189,29 @@ body {
 }
 
 .projectsection a:visited {
+  color: #91A2A7;
+}
+
+.projects {
+  text-align: center;
+  position: relative;
+  width: 100%;
+}
+
+.projects p{
+  width: 60%;
+  display: inline-block;
+  text-align: left;
+  position: relative;
+  color: #fffffe;
+  font-size: 125%;
+}
+
+.projects a:link {
+  color: #e4939c;
+}
+
+.projects a:visited {
   color: #91A2A7;
 }
 
