--- a/light.css
+++ b/light.css
@@ -52,8 +52,6 @@ body {
   z-index: 2;
 }
 
-
-/* Style the top navigation bar */
 .navbar {
   width: 100%;
   position: fixed;
@@ -64,18 +62,16 @@ body {
   z-index: 1;
 }
 
-/* Style the navigation bar links */
 .navbar a {
-  float: left; /* Make sure that the links stay side-by-side */
-  display: block; /* Change the display to block, for responsive reasons (see below) */
-  color: #85A885; /* White text color */
-  text-align: center; /* Center the text */
-  padding: 14px 20px; /* Add some padding */
-  text-decoration: none; /* Remove underline */
+  float: left; 
+  display: block; 
+  color: #85A885; /
+  text-align: center; 
+  padding: 14px 20px; 
+  text-decoration: none; 
 
 }
 
-/* Change color on hover/mouse-over */
 .navbar a:hover {
   text-decoration: underline;
   text-decoration-color: #44bbbf; /* Black text color */
