--- a/light.css
+++ b/light.css
@@ -23,7 +23,7 @@ html {
 }
 
 .header{
-  text-align: center; /* center the text */
+  text-align: center;
   padding: 100px;
   font-size: 300%;
 }
